# JuegoHaskell

./: .gitignore  CHANGELOG.md  Juego.cabal  README.md  makefile
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: Juego-0.1.0.0-inplace.conf  package.cache
src/: Config.hs  Input.hs  Logic.hs  Math.hs  Menu.hs  Render.hs  Types.hs
