cabal-version:      3.0
name:               Juego
version:            0.1.0.0
license:            NONE
author:             chago
maintainer:         chago@example.com
extra-source-files: CHANGELOG.md

-- 1. DEFINE TU BIBLIOTECA (EL CÓDIGO DEL JUEGO)
library
    -- Qué módulos (archivos) expones
    exposed-modules:  Config,
                      Types,
                      Math,
                      Render,
                      Input,
                      Logic,
                      Menu
    
    -- Dónde encontrar el código fuente
    hs-source-dirs:   src
    
    -- Dependencias que necesita la biblioteca 
    build-depends:    base ^>=4.17.2.0,
                      gloss,
                      gloss-juicy,
                      random,
                      mtl
                      
    default-language: Haskell2010

-- 2. DEFINE TU EJECUTABLE 
executable Juego
    -- El archivo principal que se ejecuta
    main-is:          Main.hs
    
    -- Dónde encontrarlo
    hs-source-dirs:   app
    
    -- Dependencias del ejecutable 
    build-depends:    base ^>=4.17.2.0,
                      Juego, 
                      gloss,
                      gloss-juicy,
                      random,
                      mtl
                      
    default-language: Haskell2010